<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bluebox</groupId>
	<artifactId>bluebox</artifactId>
	<packaging>war</packaging>
	<version>4.7.0</version>
	<name>bluebox</name>
	<url>https://github.com/stephen-kruger/bluebox</url>

	<properties>
		<subethasmtp_version>3.1.7</subethasmtp_version>
		<slf4j_version>1.7.32</slf4j_version>
		<jsoup_version>1.14.3</jsoup_version>
		<commons_io_version>2.11.0</commons_io_version>
		<rome_version>1.16.0</rome_version>
		<lucene_version>9.0.0</lucene_version>
		<lucene_analyzers_version>8.11.0</lucene_analyzers_version>
		<solr_version>8.11.0</solr_version>
		<mongo_version>3.12.10</mongo_version>
		<apache_wink>1.4</apache_wink>
		<jetty_version>11.0.7</jetty_version>
		<apache_httpclient>4.5.13</apache_httpclient>
		<h2_database>2.0.202</h2_database>
		<javax_mail>1.6.2</javax_mail>
		<commons_codec>1.15</commons_codec>
		<antisamy_version>1.6.4</antisamy_version>
		<commons_config>1.10</commons_config>
		<commons_lang>2.6</commons_lang>
		<file_upload>1.4</file_upload>
		<junit_version>4.13.2</junit_version>
		<codehaus_jettison>1.4.1</codehaus_jettison>
		<sun_javax_mail>1.6.2</sun_javax_mail>
		<javaee_version>7.0</javaee_version>
		<javax_ws_rs_api>2.1.1</javax_ws_rs_api>
		<annotation_version>1.3.2</annotation_version>
		<servlet_api_version>3.1.0</servlet_api_version>
	</properties>
	<distributionManagement>
		<repository>
			<id>nexus-site</id>
			<url>http://central_nexus/server</url>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>maven-org</id>
			<name>Maven Repo</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>maven-central</id>
			<name>Maven Central</name>
			<url>http://central.maven.org/maven2/</url>
		</repository>
	</repositories>

	<build>
		<finalName>bluebox</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<source>16</source>
						<target>16</target>
						<encoding>Cp1252</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<configuration>
						<archive>
							<manifest>
								<mainClass>com.bluebox.Utils</mainClass>
							</manifest>
						</archive>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.3</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
						<webResources>
							<resource>
								<filtering>true</filtering>
								<directory>src/main/resources</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</resource>
							<resource>
								<filtering>true</filtering>
								<directory>src/main/webapp</directory>
								<includes>
									<include>**/*</include>
								</includes>
								<targetPath>/</targetPath>
							</resource>
						</webResources>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>copy-resource-one</id>
							<phase>install</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>

							<configuration>
								<outputDirectory>${project.build.directory}</outputDirectory>
								<resources>
									<resource>
										<directory>${project.basedir}/src/main/docker</directory>
										<includes>
											<include>Dockerfile</include>
											<include>server.xml</include>
										</includes>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<!-- This plug creates the executable jar for fixing systems. Run it
					using :clean compile assembly:single <plugin> <groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId> <executions> <execution> <goals>
					<goal>attached</goal> </goals> <phase>package</phase> <configuration> <descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef> </descriptorRefs> <archive>
					<manifest> <mainClass>com.bluebox.Utils</mainClass> </manifest> </archive>
					</configuration> </execution> </executions> </plugin> -->
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>5.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit_version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-solrj</artifactId>
			<version>${solr_version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<artifactId>solr-core</artifactId>
			<groupId>org.apache.solr</groupId>
			<version>${solr_version}</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<artifactId>jdk.tools</artifactId>
					<groupId>jdk.tools</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene_version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>${lucene_analyzers_version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene_version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jettison</groupId>
			<artifactId>jettison</artifactId>
			<version>${codehaus_jettison}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.subethamail</groupId>
			<artifactId>subethasmtp</artifactId>
			<version>${subethasmtp_version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>${javax_mail}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>${sun_javax_mail}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j_version}</version>
		</dependency>

		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>${rome_version}</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>${file_upload}</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>${commons_config}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${jetty_version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>${mongo_version}</version>
		</dependency>
		<dependency>
			<groupId>org.owasp.antisamy</groupId>
			<artifactId>antisamy</artifactId>
			<version>${antisamy_version}</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>${jsoup_version}</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons_lang}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons_io_version}</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>${annotation_version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>${javax_ws_rs_api}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${servlet_api_version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-web-api</artifactId>
			<version>${javaee_version}</version> <scope>provided</scope> </dependency> -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons_codec}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wink</groupId>
			<artifactId>wink-client</artifactId>
			<version>${apache_wink}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.wink</groupId>
			<artifactId>wink-server</artifactId>
			<version>${apache_wink}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.wink</groupId>
			<artifactId>wink-common</artifactId>
			<version>${apache_wink}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.wink</groupId>
			<artifactId>wink-json-provider</artifactId>
			<version>${apache_wink}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.wink</groupId>
			<artifactId>wink-component-test-support</artifactId>
			<version>${apache_wink}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2_database}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${apache_httpclient}</version>
		</dependency>
	</dependencies>
	<scm>
		<url>https://github.com/stephen-kruger/bluebox.git</url>
	</scm>
	<issueManagement>
		<url>https://github.com/stephen-kruger/bluebox/issues</url>
	</issueManagement>
</project>
